
[metadata]
name = nc_http
author = han0
author-email = wslshanlin@sina.com
summary = awsome project created by pycman.
license = MIT
description-file = 
    README.rst
home-page = http://example.com
requires-python = >= 3.6

[files]
packages = 
    nc_http


[entry_points]
console_scripts =
    cmd=package.module:function
